# multiline

./: .gitignore  CMakeLists.txt
src/: main.cpp
